--- a/projects/validhtml/index.html
+++ b/projects/validhtml/index.html
@@ -8,80 +8,87 @@
 <body>
 
 <h1>Resume</h1><br>
+  
 <h2>About Me</h2>
-<p>
-Sara Segall is a digital media student currently studying at Seminole State College in Florida. Her coursework reflects aspects in web, film, studio art, and her core focus of graphic design. She has ten plus years’ experience as a studio artist that has won multiple awards for her artwork and is now taking her talents to computer based art. While attending school she also operates two businesses; an online resell business and a sneaker customizing business. Both allow her to gain and promote her professional and creative skills. You can reach her through her social networks <strong>@customjay_kari</strong>.
-</p>
+  <p>
+   Sara Segall is a digital media student currently studying at Seminole State College in Florida. 
+   Her coursework reflects aspects in web, film, studio art, and her core focus of graphic design. 
+   She has ten plus years experience as a studio artist that has won multiple awards for her artwork and is now taking her talents to computer based art.
+   While attending school she also operates two businesses; an online resell business and a sneaker customizing business. 
+   Both allow her to gain and promote her professional and creative skills.
+   You can reach her through her social networks <strong>@customjay_kari</strong>.
+  </p>
 
 <h2>Professional and Creative Skills</h2>
+  
   <h4>Business Skills</h4>
-  <ul>
-<li>Marketing</li>
-<li>Sales</li>
-<li>Budgets</li>
-<li>Planning</li>
-<li>Problem solving</li>
-<li>Research skills</li>
-<li>Communication skills</li>
-<li>Time management</li>
-<li>Attention to detail</li>
-<li>Deadline management</li>
-<li>Decision making</li>
-<li>Estimating costs</li>
-<li>Multitasking</li>
-<li>Organization</li>
-<li>Social media and networking</li>
-</ul>
+    <ul>
+      <li>Marketing</li>
+      <li>Sales</li>
+      <li>Budgets</li>
+      <li>Planning</li>
+      <li>Problem solving</li>
+      <li>Research skills</li>
+      <li>Communication skills</li>
+      <li>Time management</li>
+      <li>Attention to detail</li>
+      <li>Deadline management</li>
+      <li>Decision making</li>
+      <li>Estimating costs</li>
+      <li>Multitasking</li>
+      <li>Organization</li>
+      <li>Social media and networking</li>
+    </ul>
 
-<h4>Artistic Skills</h4>
-<ul>
-<li>Creative thinking</li>
-<li>Color theory</li>
-<li>Creating logos</li>
-<li>Representing ideas visually</li>
-<li>Modifying photographs</li>
-<li>Print knowledge</li>
-<li>Digital design knowledge</li>
-<li>Painting</li>
-<li>Drawing</li>
-<li>Sketching</li>
-<li>Photography</li>
-<li>Typography</li>
-</ul>
+  <h4>Artistic Skills</h4>
+    <ul>
+      <li>Creative thinking</li>
+      <li>Color theory</li>
+      <li>Creating logos</li>
+      <li>Representing ideas visually</li>
+      <li>Modifying photographs</li>
+      <li>Print knowledge</li>
+      <li>Digital design knowledge</li>
+      <li>Painting</li>
+      <li>Drawing</li>
+      <li>Sketching</li>
+      <li>Photography</li>
+      <li>Typography</li>
+    </ul>
 
-<h4>Technological Skills</h4>
-<ul>
-<li>Web development</li>
-<li>CSS</li>
-<li>Basic HTML</li>
-<li>Ability to work on multiple platforms</li>
-</ul>
+  <h4>Technological Skills</h4>
+    <ul>
+      <li>Web development</li>
+      <li>CSS</li>
+      <li>Basic HTML</li>
+      <li>Ability to work on multiple platforms</li>
+    </ul>
 
 <h2>Software Knowledge</h2>
-<ul>
-<li>Adobe Acrobat</li>
-<li>Adobe Illustrator</li>
-<li>Adobe InDesign</li>
-<li>Adobe Photoshop</li>
-<li>Adobe Premiere</li>
-<li>Microsoft Excel</li>
-<li>Microsoft PowerPoint</li>
-<li>Microsoft Word</li>
-</ul>
+  <ul>
+    <li>Adobe Acrobat</li>
+    <li>Adobe Illustrator</li>
+    <li>Adobe InDesign</li>
+    <li>Adobe Photoshop</li>
+    <li>Adobe Premiere</li>
+    <li>Microsoft Excel</li>
+    <li>Microsoft PowerPoint</li>
+    <li>Microsoft Word</li>
+  </ul>
 
 <h2>Links to my Websites</h2>
-<strong>Follow me</strong> on <A HREF="https://www.instagram.com/customjay_kari">Instagram</A>.<br>
-<strong>Find me</strong> on <A HREF="https://www.linkedin.com/in/sara-segall-574a09157">LinkedIn</A><br>
-<strong>Watch me</strong> on <A HREF="https://www.youtube.com/channel/UCKCzp9MZBX6MwiSeK-PldIg?view_as=subscriber/">Youtube</A>.<br>
-<strong>Purchase items</strong> on my <A HREF="https://www.ebay.com/usr/karithrifts8/">Ebay Store</A>.<br>
+  <strong>Follow me</strong> on <A HREF="https://www.instagram.com/customjay_kari">Instagram</A>.<br>
+  <strong>Find me</strong> on <A HREF="https://www.linkedin.com/in/sara-segall-574a09157">LinkedIn</A><br>
+  <strong>Watch me</strong> on <A HREF="https://www.youtube.com/channel/UCKCzp9MZBX6MwiSeK-PldIg?view_as=subscriber/">Youtube</A>.<br>
+  <strong>Purchase items</strong> on my <A HREF="https://www.ebay.com/usr/karithrifts8/">Ebay Store</A>.<br>
 
 <h2>My Work</h2>
-<img src="https://preview.ibb.co/jJtD1w/logo.png" width="300" alt="Tutoring Business Logo">
-<img src="https://preview.ibb.co/fYM0gw/fair.png" width="300" alt="Florida State Fair Flyer">
-<img src="https://preview.ibb.co/itGDZG/car.png" width="300" alt="Antique Car">
-<img src="https://image.ibb.co/knCTZG/flower.png" width="200" alt="Pink Flower">
-<img src="https://image.ibb.co/jwmDZG/collage.png" width="200" alt="Natural and Proud">
-<img src="https://image.ibb.co/kVuNTb/dots.png" width="200" alt="Nature Pointillism">
+  <img src="https://preview.ibb.co/jJtD1w/logo.png" width="300" alt="Tutoring Business Logo"><br>
+  <img src="https://preview.ibb.co/fYM0gw/fair.png" width="300" alt="Florida State Fair Flyer"><br>
+  <img src="https://preview.ibb.co/itGDZG/car.png" width="300" alt="Antique Car"><br>
+  <img src="https://image.ibb.co/knCTZG/flower.png" width="200" alt="Pink Flower"><br>
+  <img src="https://image.ibb.co/jwmDZG/collage.png" width="200" alt="Natural and Proud"><br>
+  <img src="https://image.ibb.co/kVuNTb/dots.png" width="200" alt="Nature Pointillism">
 
 </body>
 </html>
